--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 @media (max-width: 640px) { 
  .title { 
-  background-image: url("https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/football_767.jpg");
+  background-image: url("football_767.jpg");
   background-size: cover;
   position: relative;
 }
