--- a/css/style.css
+++ b/css/style.css
@@ -1026,7 +1026,7 @@ span {
 } 
 @media (min-width: 961px) {
   .title {
-  background-image: url("https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/football_1920.jpg");
+  background-image: url("sources/img/football_1920.jpg");
   background-size: cover;
   position: relative;
 }
