--- a/css/style.css
+++ b/css/style.css
@@ -1116,7 +1116,7 @@ span {
 
 .button {
   width: 311px;
-/*   height: 77px; */
+  height: 77px;
   border-radius: 38px;
   box-shadow: 8px 13.856px 24px #0a0e34;
   background-color: #5e42b0;
@@ -1124,9 +1124,7 @@ span {
   display: flex;
   align-items: center;
   text-decoration: none;
-  padding-top: 5%;
-  padding-bottom: 5%;
- }
+}
 
 .apple-icon, .google-icon {
   fill: #ffffff;
